-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.2.0
-
None
-
-
2c309b0a9a (qt/qtquick3d/dev) 9b686db860 (qt/qtquick3d/6.3) 45a6d175e6 (qt/qtquick3d/6.2) 45a6d175e6 (qt/tqtc-qtquick3d/6.2) 45a6d175e6 (qt/tqtc-qtquick3d/6.2.3) 45a6d175e6 (qt/tqtc-qtquick3d/6.2.4) 9b686db860 (qt/qtquick3d/6.3.0)
If primitive type is set to TriangleFan the application either crashes or only the first triangle is rendered.
To reproduce:
1) Load "Simple Skinning Example".
2) In simplegeometry.cpp set primitive type to TriangleFan
For Gerrit Dashboard: QTBUG-98748 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
388777,2 | Handle TriangleFan in a better way | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
388953,2 | Handle TriangleFan in a better way | 6.3 | qt/qtquick3d | Status: MERGED | +2 | 0 |
388954,2 | Handle TriangleFan in a better way | 6.2 | qt/qtquick3d | Status: MERGED | +2 | 0 |