Handle TriangleFan in a better way

Better means two things:
1) handle it, to begin with (it was probably not added because it is not
   supported with half of our graphics APIs, but it is in our geometry
   API so try doing what we can)
2) check for support and show a warning if not supported. The custom
   geometry docs are already good enough in this regard because they
   warn about this, but we should print something at run time too.

Pick-to: 6.3 6.2
Fixes: QTBUG-98748
Change-Id: Iccd3843faaa11a921c2b2740c2e108b1367a7e62
Reviewed-by: Andy Nichols <andy.nichols@qt.io>